--- a/src/css/ExerciseCard.css
+++ b/src/css/ExerciseCard.css
@@ -74,3 +74,22 @@
         font-size: 0.8rem;
     }
 }
+
+@media (max-width: 480px) {
+
+    .exercise-card {
+        padding: 2rem;
+    }
+
+    .exercise-card h2 {
+        font-size: 1.3rem;
+    }
+
+    .exercise-info {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        text-align: center;
+        line-height: 0.5;
+    }
+}
