--- a/src/css/SearchBar.css
+++ b/src/css/SearchBar.css
@@ -36,3 +36,14 @@
     font-size: 16px;
     cursor: pointer;
 }
+
+@media (max-width: 480px) {
+
+    .search-input {
+        font-size: 0.8rem;
+    }
+
+    .search-button {
+        padding: 0.75rem 0.8rem;
+    }
+}
