further styling for small (phone) screens

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -37,6 +37,7 @@
 @media (max-width: 480px) {
 
     .navbar-link {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
+        line-height: 1;
     }
 }
