--- a/src/css/SearchBar.css
+++ b/src/css/SearchBar.css
@@ -40,10 +40,15 @@
 @media (max-width: 480px) {
 
     .search-input {
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 
     .search-button {
         padding: 0.75rem 0.8rem;
+    }
+
+    .search-form {
+        display: flex;
+        flex-direction: column;
     }
 }
