--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -36,8 +36,12 @@
 
 @media (max-width: 480px) {
 
+    .navbar-links {
+        padding: 10px;
+    }
+
     .navbar-link {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         line-height: 1;
     }
 }
